app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}


html, body {
  background: #ffffff !important;
  color: #111111;
  font-family: Arial, Helvetica, sans-serif;
  overflow-x: hidden;
}

.splide__track {
  overflow: hidden !important;
}

.splide__arrow {
  background: transparent;
  opacity: 0.6;
}

.splide__arrow:hover {
  opacity: 1;
}

